# AI

./: .bandit  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mutmut.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  web_main.py
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: MANIFEST_EXAMPLE.json
assets/: ai_chan.icns  ai_chan.png.bak-20260409-024836
bench/: README.md  __init__.py  dataset_loaders.py  datasets.py  evaluator.py  metrics.py  runner.py
config/: SETTINGS_INIT.md  access_control.json  com.aichan.security-audit.plist  consent_items.yaml  log_retention.yaml  persona.json  screenshot_sensitive_patterns.yaml.example  security_policy.yaml  settings.json.example  settings_schema.json  voice_auth_challenges.yaml
core/: __init__.py  a11y_announcer.py  action_cycle.py  aether_benchmark.py  aether_training_gen.py  ai_chan.py  akashic_core.py  alerts.py  anniversary.py  anniversary_ical_bridge.py  anniversary_importance.py  anomaly_detector.py  audio_fx.py  audit_chain.py  audit_log.py  auto_learner.py  autonomous_actions.py  autonomous_engine.py  backup_rotator.py  battery_monitor.py  bgm_suggester.py  bio_nervous_system.py  calendar_reader.py  cat5_wiring.py  clipboard_assistant.py  clipboard_image.py  clipboard_watcher.py  cmd_handlers.py  code_engine.py  code_reviewer.py  code_sandbox.py  competitor_analyzer.py  config_model.py  config_watcher.py  consent.py  continuous_learner.py  conversation_intelligence.py  conversation_search.py  correction_learning.py  data_exporter.py  (+122 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMUNICATIONS.md  JOURNAL.md  KNOWN_ISSUES.md  LICENSES.md  LICENSE_MODEL_DRAFT.md  MEMORY_HONESTY.md  MODEL_BASELINE.md  MODEL_FAMILY.md  MODEL_POLICY.md  PRIVACY.md  PR_PLAN_20260423.md  ROADMAP.md  SECURITY.md  SECURITY_TRIAGE_2026-04-21.md  SETUP_VENV.md  STT.md  TAXONOMY.md  THREAT_MODEL.md  TTS.md  VALUES.md  VALUES_RUBRIC.md  VISION.md  aether-model-design.md  architecture-ai-yamato.md  competitive-analysis.md  expansion-plan.md  performance-ideas.md  roadmap-llm-upgrade.md  roadmap-sandbox.md  support-expansion-ideas.md  update-plans-100.md  yamato-mindmap.html  yamato-mindmap.v3.backup.html
launchd/: README.md  com.aichan.api-docs.plist  com.aichan.backup-restore-drill.plist  com.aichan.dr-drill.plist  com.aichan.flaky-finder.plist  com.aichan.killswitch-drill.plist  com.aichan.log-retention.plist  com.aichan.monitoring-checks.plist
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: add_learning_data.py  ai_chan_llm_worker.py  analyze_honesty_bench.py  audit.sh  audit_journal_dates.py  audit_model_family.py  backup_restore_drill.sh  bench_llm_backends.py  build_api_docs.sh  check_backup_freshness.py  check_corpus_isolation.py  check_crypto_surface.py  check_disk_space.py  check_feature_rubric.py  check_licenses.py  check_outdated.py  check_security_policy.py  check_taxonomy.py  clean_learning.py  convert_hf_to_gguf.py  create_macos_app.sh  daily_learning_update.py  daily_security_audit.sh  detach_memory_phase_a.py  detach_memory_phase_b.sh  diagnose.py  docker_build_and_hash.sh  dr_drill.sh  export_anniversaries_ical.py  finetune_qlora.py  fix_mic_permission.sh  gen_arch_diagram.py  gen_changelog.py  gen_cmd_ref.py  generate_artifact_manifest.py  generate_emotion_report.py  install.sh  install_security_launchd.sh  killswitch_drill.sh  lint_minutes.py  (+28 more)
skills/: architecture-map.md  known-issues-and-fixes.md  model-update.md  module-patterns.md  quick-diagnostics.md  review-checklist.md  sprint-history.md  troubleshooting.md
tests/: conftest.py  test_action_cycle.py  test_aether.py  test_alerts.py  test_anniversary_importance.py  test_audit_chain.py  test_audit_journal_dates.py  test_audit_model_family.py  test_autonomous_engine.py  test_bench_evaluator.py  test_blocker_regression.py  test_cat5_integration_e2e.py  test_check_crypto_surface.py  test_check_feature_rubric.py  test_code_engine.py  test_consent.py  test_conversation_intelligence.py  test_conversation_search.py  test_corpus_isolation.py  test_correction_learning.py  test_defense.py  test_desktop_pet_a11y.py  test_desktop_pet_e2e.py  test_document_exporter.py  test_emotion_drift.py  test_gitleaks_rules.py  test_growth_report.py  test_high_regression.py  test_hinomoto_bridge.py  test_ical_export.py  test_judges.py  test_lifelong_memory.py  test_lint_minutes.py  test_llm_backend.py  test_llm_hinomoto_integration.py  test_llm_ipc.py  test_llm_ipc_crash.py  test_local_judge_honesty.py  test_log_retention_sweep.py  test_medium_regression.py  (+33 more)
tools/: live_translator.py  minutes_viewer.py
ui/: chat_widgets.py  cli.py  desktop_pet.py  desktop_pet_a11y.py  emotion_drift_window.py  export_window.py  graph_window.py  (+4 more)
(+235 files in other folders)
